# astrovision

./: .coverage  .gitignore  5_band_ai.json  CLAUDE.md  CODEBASE_REVIEW.md  DESIGN_ProcessingPipeline.md  DESIGN_ValidationReport.md  FITS.md  FITS_DATA_ACQUISITION_GUIDE.md  PHASE_3B_COMPLETION_SUMMARY.md  PHASE_5_DAY6_SUMMARY.md  PHASE_5_FINAL_SUMMARY.md  QUALITY.md  README.md  STATUS_UPDATE_2025-10-26.md  TEST_IMPLEMENTATION_SUMMARY.md  WORKFLOW_GUIDE.md  check_memory.py  current_packages.txt  diagnose_all_bands.py  diagnose_background.py  pyproject.toml  pytest.ini  requirements.txt  suppress_warnings.py  test_5band_ai_analysis.py  test_5band_json.py  test_background2d_proper.py  test_custom_enhancements.py  test_enhanced_rings.py  test_fits_inspect.py  test_wcs_ape14_simple.py
.claude/: settings.local.json
debug/: README.md  check_fits_metadata.py  debug_background2d.py  debug_hybrid.py  list_raw_fits.py
deprecated/: CLAUDE.md
deprecated/old_api_src/: calibrator.py  fits_loader.py  mission_adapters.py  phase1_demo_new.py  phase2_demo.py  phase4_demo_new.py  (+1 more)
examples/: DEMO_WORKFLOW.md  README.md  calibration_manager_enhanced_example.py  calibration_manager_example.py  fetch_jwst_data_missioncontrol.py  narrowband_palette_example.py  phase1_demo.py  phase2_demo_new.py  phase3_demo.py  phase3_demo_new.py  pipeline_demo.py  wcs_handler_multi_mission_example.py
outputs/: README.md
scripts/: astro_ai_client.py  astro_ai_client_v2.py  astro_pipeline_client.py  local_vision_inference.py  theme_vision.py  transformers_client.py
tests/: README.md  conftest.py
(+98 files in other folders)
